@@ -1,0 +1,9 @@
+!define LANG "Portuguese"
+!insertmacro LANG_STRING STRING_SHORTCUT_ON_DESKTOP "Should a shortcut be placed on the desktop?"
+!insertmacro LANG_STRING STRING_UNINSTALLED_OK "$(^Name) was successfully uninstalled."
+!insertmacro LANG_STRING STRING_REMOVE_PROGRAM_QUESTION "Do you really want to remove $(^Name) and all of its components?"
+!insertmacro LANG_STRING STRING_REMOVE_JOB_FILES_QUESTION "Should job files created by the GUI be deleted as well?"
+
+# Local Variables:
+# mode: nsi
+# End:
