@@ -256,3 +256,4 @@ T_407empty_tag_and_chapter_files:9b56c96b16de691f479a0bff09f7f3b3-9b56c96b16de69
 T_408utf_encodings_with_bom:14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564:passed:20131019-155216:0.215939391
 T_409mux_vp9:fc1aae4cb828024783d254077ead7eb6-aa52fea93972a3294168417659dd8842:passed:20131019-195820:0.071892447
 T_410extract_vp9:b6135380fa07f827384ad1004015d79c:passed:20131019-200643:0.033861429
+T_411ui_locale_pt_PT:7378e1146862dcb96f11caa91d33c5cb-3182bfa8c7ef57b56185285fbd614c98:passed:20131026-154124:0.073196901
