@@ -1,0 +1,4 @@
+#!/usr/bin/ruby -w
+
+# T_411ui_locale_pt_PT
+test_ui_locale "pt_PT"
